--- a/film/templates/serie_preview.html
+++ b/film/templates/serie_preview.html
@@ -4,14 +4,17 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
+
+{% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE HTML>
-<head> 
+<head>                    
 <title>Free Movies Store Website Template | Preview :: w3layouts</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all"/>
-<script type="text/javascript" src="{% static 'js/jquery-1.9.0.min.js' %}"></script> 
-<script type="text/javascript" src="{% static 'js/move-top.js' %}"></script>
+<script type="text/javascript" src=" {% static 'js/jquery-1.9.0.min.js' %}"></script> 
+<script type="text/javascript" src=" {% static 'js/move-top.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/easing.js' %}"></script>
 </head>
 <body>
@@ -37,7 +40,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="clear"></div>
 			</div>
 	  	</div>
-  	  		<div class="wrap"> 
+  	  		<div class="wrap">
 				<div class="header_top">
 					<div class="logo">
 						<a href="index.html"><img src="{% static 'images/logo.png' %}" alt="" /></a>
@@ -95,11 +98,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     	    </div>
     		<div class="clear"></div>
     	</div>
-   	 	<div class="section group">     
+   	 	<div class="section group">
 				<div class="cont-desc span_1_of_2">
 				  <div class="product-details">				
 					<div class="grid images_3_of_2">
-						<img src=" {% static 'images/preview.jpg' %}" alt="" />
+						<img src="{{ serie_detail.serie_image.url }}" alt="" />
 				  </div>
 				<div class="desc span_3_of_2">
 					<h2>Wrath of the Titans </h2>
@@ -136,9 +139,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 	   </div>
    </div>
-				<div class="rightsidebar span_3_of_1 sidebar">
+				<div class="rightsidebar span_3_of_1 sidebar">   
 					<h2>Specials</h2>
-					 	<div class="special_movies">   
+					 	<div class="special_movies">
 					 	   <div class="movie_poster">
 					 		  <a href="preview.html"><img src="{% static 'images/end-game.jpg' %}" alt="" /></a>
 					 		 </div>
@@ -237,12 +240,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li><span>+00-123-000000</span></li>
 						</ul>
 						<div class="social-icons">
-							<h4>Follow Us</h4>   {% static 'images/linkedin.png' %}
+							<h4>Follow Us</h4>
 					   		  <ul>
-							      <li><a href="#" target="_blank"><img src="{% static 'images/facebook.png' %}" alt="" /></a></li>
-							      <li><a href="#" target="_blank"><img src="{% static 'images/twitter.png' %}" alt="" /></a></li>
-							      <li><a href="#" target="_blank"><img src="{% static 'images/skype.png' %}" alt="" /> </a></li>
-							      <li><a href="#" target="_blank"> <img src="{% static 'images/linkedin.png' %}" alt="" /></a></li>
+							      <li><a href="#" target="_blank"><img src="images/facebook.png" alt="" /></a></li>
+							      <li><a href="#" target="_blank"><img src="images/twitter.png" alt="" /></a></li>
+							      <li><a href="#" target="_blank"><img src="images/skype.png" alt="" /> </a></li>
+							      <li><a href="#" target="_blank"> <img src="images/linkedin.png" alt="" /></a></li>
 							      <div class="clear"></div>
 						     </ul>
    	 					</div>
