--- a/film/templates/serie_preview.html
+++ b/film/templates/serie_preview.html
@@ -184,15 +184,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								 </div>
 								<div class="clear"></div>
 					 		</div>	 -->
-							 {%if get_serie_ids %}
+							 {%if serie_detail.season_set.all %}
 					 		<div class="special_movies">
 					 	   <div class="movie_poster">
-							{% for get_serie_ids in get_serie_ids %}
+							{% for season in serie_detail.season_set.all %}
 					 		  <!-- <a href="preview.html"><img src="{% static 'images/Coraline.jpg' %}" alt="" /></a> -->
 					 		 </div>
 					 		   <div class="movie_desc">
-							    <h3><a href="preview.html">{{ season_detail.season_name }}</a></h3>
-								   <p><span>$620.87</span> &nbsp; $500.35</p>
+							    <h3><a href="preview.html">{{ season.season_name }}</a></h3>
+								{% for episode in season.episode_set.all %}
+								   <p><span>$620.87</span> &nbsp; {{ episode.episode_name }}</p>
+								   {% endfor %} 
 								     <span><a href="#">Add to Cart</a></span>
 								 </div>
 								<div class="clear"></div>
@@ -202,7 +204,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							  <div class="card-body">
 							  <h4>No Data available</h4>
 							  </div>
-						  {%endif%}
+						       {%endif%}
 					 	<div class="special_movies">
 					 	   <div class="movie_poster">
 					 		  <a href="preview.html"><img src="{% static 'images/Eclipse.jpg' %}" alt="" /></a>
