--- a/film/templates/serie_preview.html
+++ b/film/templates/serie_preview.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 {% load crispy_forms_tags %}
 <!DOCTYPE HTML>
 <head>                    
-<title>UK_Movies Store Website Template | Preview :: usak</title>
+<title>UK_Movies Store </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all"/>
