--- a/film/templates/serie_preview.html
+++ b/film/templates/serie_preview.html
@@ -16,6 +16,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script type="text/javascript" src=" {% static 'js/jquery-1.9.0.min.js' %}"></script> 
 <script type="text/javascript" src=" {% static 'js/move-top.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/easing.js' %}"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="header">
@@ -135,149 +138,46 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		  </div>
 		<div class="product_desc">	
 			 <h2>Details :</h2>
-			   <p><div class="accordion" id="accordionPanelsStayOpenExample">
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-        Accordion Item #1
-      </button>
-    </h2>
-    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-      <div class="accordion-body">
-        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-        Accordion Item #2
-      </button>
-    </h2>
-    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-      <div class="accordion-body">
-        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-        Accordion Item #3
-      </button>
-    </h2>
-    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-      <div class="accordion-body">
-        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-      </div>
-    </div>
-  </div>
-</div></p>
+			   <p><div class="container">
+				
+				<h2>Accordion Example</h2>
+				<p><strong>Note:</strong> The <strong>data-parent</strong> attribute makes sure</p>
+				{%if serie_detail.season_set.all %}
+				
+			<div class="panel-group" id="accordion">
+				{% for season in serie_detail.season_set.all %}
+				<div class="panel panel-default">
+					<div class="panel-heading">
+					  <h4 class="panel-title">
+						
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">{{ season.season_name }}</a>
+					  </h4>
+					</div>
+					
+					<div id="collapse1" class="panel-collapse collapse in">
+						{% for episode in season.episode_set.all %}
+					  <div class="panel-body">{{ episode.episode_name }}</div>
+					  {% endfor %} 
+					</div>
+					
+				  </div>
+				  
+					
+				  {% endfor %}  
+					
+			 </div>
+			 
+		</div> 
+					
+				{%else%}
+				<div class="card-body">
+					<h4>No Data available</h4>
+					</div>
+					 {%endif%}
+			  </div></p>
 	           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 	   </div>
    </div>
-				<div class="rightsidebar span_3_of_1 sidebar">   
-					<!-- <h2>Specials</h2> -->
-					
-					<div class="container">
-					 	<div class="special_movies">
-							<div class="panel-group" id="accordion">
-								<div class="panel panel-default">
-								  <div class="panel-heading">
-									<h4 class="panel-title">
-									  <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Collapsible Group 1</a>
-									</h4>
-								  </div>
-								  
-								  <div>
-									<div class="panel-body"></div>
-								  </div>
-								  
-								</div>
-							</div>
-							
-							<div class="panel panel-default">
-								<div class="panel-heading">
-								  <h4 class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Collapsible Group 2</a>
-								  </h4>
-								</div>
-								<div id="collapse2" class="panel-collapse collapse">
-								  <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-								  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-								</div>
-							  </div>
-						 </div>
-						       
-					</div>
-						 <!-- <div class="movie_poster">
-					 		  <a href="preview.html"><img src="{% static 'images/end-game.jpg' %}" alt="" /></a>
-					 		 </div>
-					 		   <div class="movie_desc">
-							    <h3><a href="preview.html">End Game</a></h3>
-								   <p><span>$620.87</span> &nbsp; $500.35</p>
-								     <span><a href="#">Add to Cart</a></span>
-								 </div>
-								<div class="clear"></div>
-					 		</div>	 -->
-							 {%if serie_detail.season_set.all %}
-					 		<div class="special_movies">
-					 	   <div class="movie_poster">
-							{% for season in serie_detail.season_set.all %}
-					 		  <!-- <a href="preview.html"><img src="{% static 'images/Coraline.jpg' %}" alt="" /></a> -->
-					 		 </div>
-					 		   <div class="movie_desc">
-							    <h3><a href="preview.html">{{ season.season_name }}</a></h3>
-								{% for episode in season.episode_set.all %}
-								   <p><span>$620.87</span> &nbsp; {{ episode.episode_name }}</p>
-								   {% endfor %} 
-								     <span><a href="#">Add to Cart</a></span>
-								 </div>
-								<div class="clear"></div>
-					 		</div>
-					          {% endfor %} 	
-							  {%else%}
-							  <div class="card-body">
-							  <h4>No Data available</h4>
-							  </div>
-						       {%endif%}
-					 	<div class="special_movies">
-					 	   <div class="movie_poster">
-					 		  <a href="preview.html"><img src="{% static 'images/Eclipse.jpg' %}" alt="" /></a>
-					 		 </div>
-					 		   <div class="movie_desc">
-							    <h3><a href="preview.html">Eclipse</a></h3>
-								   <p><span>$620.87</span> &nbsp; $500.35</p>
-								     <span><a href="#">Add to Cart</a></span>
-								 </div>
-								<div class="clear"></div>
-					 		</div>	
-					 		<div class="special_movies">
-					 	   <div class="movie_poster">
-					 		  <a href="preview.html"><img src=" {% static 'images/Priest.jpg' %}" alt="" /></a>
-					 		 </div>
-					 		   <div class="movie_desc">
-							    <h3><a href="preview.html">Priest 3D</a></h3>
-								   <p><span>$620.87</span> &nbsp; $500.35</p>
-								     <span><a href="#">Add to Cart</a></span>
-								 </div>
-								<div class="clear"></div>
-					 		</div>	
-					 		<div class="special_movies">
-					 	    <div class="movie_poster">
-					 		  <a href="preview.html"><img src="{% static 'images/Sorority_Wars.jpg' %}" alt="" /></a>
-					 		 </div>
-					 		   <div class="movie_desc">
-							    <h3><a href="preview.html">Sorority Wars</a></h3>
-								   <p><span>$620.87</span> &nbsp; $500.35</p>
-								     <span><a href="#">Add to Cart</a></span>
-								 </div>
-								<div class="clear"></div>
-					 		</div>			 
- 					   </div>
- 		 		 </div>
-   	 		</div>
 				
 						 
         </div>
