--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -39,8 +39,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<ul>
 						    <li><a href="#">Checkout</a></li>
 							<li><a href="preview.html">Delivery</a></li>
-							<li><a href="contact.html">LogIn</a></li>
-							<li><a href="contact.html">Register</a></li>
+							<li><a href="{% url 'login' %}">LogIn</a></li>
+							<li><a href="{% url 'register' %}">Register</a></li>
 						    <li><a href="contact.html">My Account</a></li>	
 						</ul>	
 					</div>
