--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -40,8 +40,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						    <li><a href="#">Checkout</a></li>
 							<li><a href="preview.html">Delivery</a></li>
 							<li><a href="{% url 'login' %}">LogIn</a></li>
-							<li><a href="{% url 'register' %}">Register</a></li>
-						    <li><a href="contact.html">My Account</a></li>	
+							<li><a href="{% url 'signup' %}">Register</a></li>
+						    <li><a href="{% url 'logout' %}">Logout</a></li>	
 						</ul>	
 					</div>
 			</div>
