--- a/film/templates/test2.html
+++ b/film/templates/test2.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     
 <head>
@@ -89,13 +90,13 @@
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{form.username}}
+							<input type="text" name="username" placeholder="Username..." class="form-control">
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
-								{{form.password}}
+								<input type="password" name="password" placeholder="Password..." class="form-control" >
 						</div>
 
 							<div class="d-flex justify-content-center mt-3 login_container">
@@ -107,29 +108,13 @@
 		
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Don't have an account? <a href="{% url 'signup' %}" class="ml-2">Sign Up</a>
+						Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
 					</div>
 			
 				</div>
 			</div>
 		</div>
 	</div>
-	<script>
-		/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-//We start indexing at one because CSRF_token is considered and input field 
-*/
-
-//Query All input fields
-var form_fields = document.getElementsByTagName('input')
-form_fields[0].placeholder='Username..';
-form_fields[1].placeholder='Enter password...';
-
-
-
-for (var field in form_fields){	
-form_fields[field].className += ' form-control'
-}
-</script>
 </body>
 
 </html>
