--- a/film/templates/login.html
+++ b/film/templates/login.html
@@ -85,17 +85,18 @@
 				</div>
 				<div class="d-flex justify-content-center form_container">
 					<form method="POST" action="">
+						{% csrf_token %}
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							{{form.username}}
+							<input type="text" name="username"  class="form-control">
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
-								{{form.password}}
+							<input type="password" name="password"  class="form-control">
 						</div>
 
 							<div class="d-flex justify-content-center mt-3 login_container">
@@ -104,6 +105,17 @@
 					</form>
 
 				</div>
+				{% if messages %}
+<ul class="message">
+    {% for message in messages %}
+    <li>
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    </li>
+    {% endfor %}
+</ul>
+{% endif %}
 		
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
