--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -1,6 +1,7 @@
 
 {% load static %}
 {% load crispy_forms_tags %}
+{% load widget_tweaks %}
 <!--A Design by W3layouts
 Author: W3layout
 Author URL: http://w3layouts.com
@@ -12,6 +13,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <title>UK_MOVIES</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all"/>
 <link href="{% static 'css/slider.css' %}" rel="stylesheet" type="text/css" media="all"/>
 
@@ -158,19 +163,46 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     		<h3>MOVIES</h3>
     		</div>   
     	</div>
-		{%if get_moviys %}
-	
+		{%if user_filter %}
+		<form method="get">
+			<!-- {{ user_filter.form|crispy }} -->
+			<!-- {% render_field user_filter.form.movie_title class="form-control" placeholder="Movie Title" %}
+			{% render_field user_filter.form.movie_general class="form-control" placeholder="Movie General" %}
+			{% render_field user_filter.form.movie_VJ class="form-control" placeholder="Movie VJ" %}
+			{% render_field user_filter.form.movie_cost class="form-control" placeholder="movie cost" %}
+			{% render_field user_filter.form.movie_status1 class="form-control" placeholder="movie status1" %} -->
+			{% for field in user_filter.form.visible_fields %}
+      <div class="form-group">
+        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+        {{ field|add_class:'form-control' }}
+        {% for error in field.errors %}
+          <span class="help-block">{{ error }}</span>
+        {% endfor %}
+      </div>
+    {% endfor %}
+	<div class="form-group">
+		<button type="submit" class="btn btn-success">
+		  <span class="glyphicon glyphicon-ok"></span> Search
+		</button>
+		
+	  </div>
+			<!-- <button type="submit">Search</button> -->
+		  </form>
 	        <div class="section group">
-				{% for get_moviys in get_moviys %}
+				
+				{% for user_filter in user_filter.qs %}
 				<div class="grid_1_of_5 images_1_of_5">
-					<a href="{% url 'mov_detail' get_moviys.id %}"><img src="{{ get_moviys.movie_image.url }}" alt=""  width="100px" height="100px"/></a>
-					 <h2><a href="{% url 'mov_detail' get_moviys.id %}">{{get_moviys.movie_title}}</a></h2>
+					<a href="{% url 'mov_detail' user_filter.id %}"><img src="{{ user_filter.movie_image.url }}" alt=""  width="100px" height="100px"/></a>
+					 <h2><a href="{% url 'mov_detail' user_filter.id %}">{{user_filter.movie_title}}</a></h2>
 					<div class="price-details">
 				       <div class="price-number">
-							<p><span class="rupees">{{get_moviys.movie_cost}}</span></p>
+							<p><span class="rupees">{{user_filter.movie_cost}}</span></p>
+					    </div>
+						<div class="price-number">
+							<p><span class="rupees">{{user_filter.movie_release_date}}</span></p>
 					    </div>
 					       		<div class="add-cart">								
-									<h4><a href="{% url 'mov_detail' get_moviys.id %}">{{get_moviys.movie_VJ}}</a></h4>
+									<h4><a href="{% url 'mov_detail' user_filter.id %}">{{user_filter.movie_VJ}}</a></h4>
 							     </div>
 							 <div class="clear"></div>
 					</div>
