--- a/film/templates/serie_preview.html
+++ b/film/templates/serie_preview.html
@@ -46,7 +46,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   	  		<div class="wrap">
 				<div class="header_top">
 					<div class="logo">
-						<a href="index.html"><img src="images/logo.png" alt="" /></a>
+						<a href="{% url 'movie' %}"><img src="{% static 'images/Uk Logo.png' %}" alt="" /></a>
 					</div>
 						<div class="header_top_right">
 						  <div class="cart">
