--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -41,14 +41,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="nav_list">
 					<ul>
 						<li><a href="{% url 'movie' %}">Home</a></li>
-						<li><a href="contact.html">Sitemap</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="contact.html">About Us</a></li>
+						
 					</ul>
 				</div>
 					<div class="account_desc">
 						<ul>
-						    <li><a href="#">Checkout</a></li>
-							<li><a href="preview.html">Delivery</a></li>
+							<li><a href="preview.html">Subscribe</a></li>
 							<li><a href="{% url 'login' %}">LogIn</a></li>
 							<li><a>Welcome:{{request.user.username}}</a></li>
 							<li><a href="{% url 'signup' %}">Register</a></li>
@@ -163,7 +162,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     		<h3>MOVIES</h3>
     		</div>   
     	</div>
-		{%if user_filter %}
+		{%if  get_moviy_title_filter %}
 		<form method="get">
 			<!-- {{ user_filter.form|crispy }} -->
 			<!-- {% render_field user_filter.form.movie_title class="form-control" placeholder="Movie Title" %}
@@ -171,9 +170,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			{% render_field user_filter.form.movie_VJ class="form-control" placeholder="Movie VJ" %}
 			{% render_field user_filter.form.movie_cost class="form-control" placeholder="movie cost" %}
 			{% render_field user_filter.form.movie_status1 class="form-control" placeholder="movie status1" %} -->
-			{% for field in user_filter.form.visible_fields %}
+			{% for field in  get_moviy_title_filter.form.visible_fields %}
       <div class="form-group">
-        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+        <label for="{{ field.id_for_label }}">Enter Movie Title</label>
         {{ field|add_class:'form-control' }}
         {% for error in field.errors %}
           <span class="help-block">{{ error }}</span>
@@ -259,28 +258,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Customer Service</a></li>
 						<li><a href="#">Advanced Search</a></li>
-						<li><a href="#">Orders and Returns</a></li>
-						<li><a href="contact.html">Contact Us</a></li>
+						<li><a href="#">Privacy Policy</a></li>
 						</ul>
 					</div>
-				<div class="col_1_of_4 span_1_of_4">
-					<h4>Why buy from us</h4>
-						<ul>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Customer Service</a></li>
-						<li><a href="#">Privacy Policy</a></li>
-						<li><a href="contact.html">Site Map</a></li>
-						<li><a href="#">Search Terms</a></li>
-						</ul>
-				</div>
+				
 				<div class="col_1_of_4 span_1_of_4">
 					<h4>My account</h4>
 						<ul>
-							<li><a href="contact.html">Sign In</a></li>
-							<li><a href="index.html">View Cart</a></li>
-							<li><a href="#">My Wishlist</a></li>
-							<li><a href="#">Track My Order</a></li>
-							<li><a href="contact.html">Help</a></li>
+							<li><a href="preview.html">Subscribe</a></li>
+							<li><a href="{% url 'login' %}">LogIn</a></li>
+							<li><a href="{% url 'signup' %}">Register</a></li>
+						    <li><a href="{% url 'logout' %}">Logout</a></li>	
 						</ul>
 				</div>
 				<div class="col_1_of_4 span_1_of_4">
