--- a/film/templates/movie_preview.html
+++ b/film/templates/movie_preview.html
@@ -25,7 +25,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="wrap">
 				<div class="nav_list">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="{% url 'movie' %}">Home</a></li>
 						<li><a href="contact.html">Sitemap</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
