--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -223,6 +223,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     		<h3>SERIES</h3>
     		</div>
     	  </div>
+		  <a class="btn btn-success" href="{% url 'search_serie_items' %}" role="button">
+			<span class="glyphicon glyphicon-ok"></span> Search</a>
+		  </button>
 			<div class="section group">
 				{% for get_seriys in get_seriys %}
 				<div class="grid_1_of_5 images_1_of_5">
@@ -257,7 +260,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<ul>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Customer Service</a></li>
-						<li><a href="#">Advanced Search</a></li>
+						<li><a href="{% url 'search_serie_items' %}">Advanced Search</a></li>
 						<li><a href="#">Privacy Policy</a></li>
 						</ul>
 					</div>
