--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -70,11 +70,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<li>you have no items in your Shopping cart</li>
 								</ul></div></p>
 						  </div>
-							  <div class="search_box">
-					     		<form>
-					     			<input type="text" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}"><input type="submit" value="">
-					     		</form>
-					     	</div>
+						  <div class="btn-group">
+							<button type="button" class="btn btn-success"><a href="{% url 'search_items' %}"><span class="glyphicon glyphicon-ok"></span>MOVIES</a></button>
+							<button type="button" class="btn btn-success"><a href="{% url 'search_serie_items' %}"><span class="glyphicon glyphicon-ok"></span>SERIES</a></button>
+							<button type="button" class="btn btn-success"><a href="#"><span class="glyphicon glyphicon-ok"></span>ISLAM</a></button>
+						  </div>
 						 <div class="clear"></div>
 					</div>
 						  <script type="text/javascript">
